--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - '**'
+  pull_request:
 
 jobs:
   lint-test:
@@ -14,6 +15,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+          cache: 'pip'
       - name: Check for code changes
         id: code_changes
         run: |
@@ -28,10 +30,11 @@ jobs:
         if: steps.code_changes.outputs.count != '0'
         run: |
           python -m pip install --upgrade pip
-          pip install ruff pytest
+          pip install ruff pytest pytest-cov tzdata
+          pip install -e .
       - name: Run ruff
         if: steps.code_changes.outputs.count != '0'
-        run: ruff .
+        run: ruff check .
       - name: Run tests
         if: steps.code_changes.outputs.count != '0'
         run: pytest
