Add tzdata dependency and document requirement

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "prometheus_client",
     "pytz",
     "pyyaml",
+    "tzdata",
     "requests",
     "temporalio",
     "httpx<0.28",
