--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "requests",
     "temporalio",
     "httpx<0.28",  # pinned for compatibility with temporalio
+    "watchdog",
 ]
 
 [project.scripts]
