--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install ruff pytest pytest-cov tzdata
           pip install -e .
-      - name: Run ruff
+      - name: Run ruff check
         if: steps.code_changes.outputs.count != '0'
         run: ruff check .
       - name: Run tests
