--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,11 +30,14 @@ jobs:
         if: steps.code_changes.outputs.count != '0'
         run: |
           python -m pip install --upgrade pip
-          pip install ruff pytest pytest-cov tzdata
+          pip install ruff pytest pytest-cov mypy tzdata
           pip install -e .
       - name: Run ruff check
         if: steps.code_changes.outputs.count != '0'
         run: ruff check .
+      - name: Run mypy
+        if: steps.code_changes.outputs.count != '0'
+        run: mypy .
       - name: Run tests
         if: steps.code_changes.outputs.count != '0'
         run: pytest
