--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,4 +41,12 @@ dev = [
     "ruff",
     "pytest",
     "pytest-cov",
+    "mypy",
+    "types-requests",
+    "types-PyYAML",
 ]
+
+[tool.mypy]
+python_version = "3.10"
+ignore_missing_imports = true
+check_untyped_defs = true
