--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,3 +50,5 @@ dev = [
 python_version = "3.10"
 ignore_missing_imports = true
 check_untyped_defs = true
+files = ["task_cascadence"]
+exclude = "tests"
