--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     "temporalio",
     "httpx<0.28",  # pinned for compatibility with temporalio
     "watchdog",
-    "protobuf",
+    "protobuf>=6.31.1,<7",
     "filelock",
 ]
 
